[tool.poetry]
name = "motor-types"
version = "0.0.0"
description = "Python stubs for Motor, a Non-Blocking MongoDB driver for Python's Tornado and AsyncIO based applications."
authors = ["L0RD-ZER0 <ackerhon@gmail.com>"]
readme = "README.md"
packages = [{include = "motor"}]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.3.3"
motor = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
