[tool.poetry]
name = "motor-types"
version = "1.0.0b1"
description = "Python stubs for Motor, a Non-Blocking MongoDB driver for Python's Tornado and AsyncIO based applications."
authors = ["L0RD-ZER0 <ackerhon@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "motor-stubs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Editors",
    "Topic :: Utilities",
    "Typing :: Stubs Only",
]
homepage = "https://github.com/L0RD-ZER0/Motor-Types"
repository = "https://github.com/L0RD-ZER0/Motor-Types"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/L0RD-ZER0/Motor-Types/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
pymongo = { version = ">=4.3.0" }
motor = { version = ">=3.0.0", optional = true }
typing-extensions = { version = ">=4.0.0" }
dnspython = { version = ">=2.3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = { version = ">=2.20.0" }

[tool.poetry.extras]
motor = ["dnspython", "motor"]

[tool.isort]
profile = "black"
line_length = 88
append_only = true
src_paths = ["src"]
combine_star = true
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
